@@ -1,2 +1,3 @@
-V1 released
+V1 initial release
 V2 new features
+V3 reset handler
